<resources>
    <string name="app_name">Wish\'em</string>
    <string name="title">Wish\'em</string>
    <string name="slogan">Birthday Reminder App</string>
    <string name="onboard1">Remember Every Birthday</string>
    <string name="onboard11">Get automatic reminders so you never miss a special day again</string>
    <string name="onboard2">Personalize Your Wishes</string>
    <string name="onboard22">Send heartfelt messages, images, or voice notes with ease</string>
    <string name="onboard3">Celebrate with Smart Notifications</string>
    <string name="onboard33">Get timely alerts to wish just at the right moment</string>
    <string name="nextBtn1">Next</string>
    <string name="nextBtn2">Next</string>
    <string name="getStart">Get Started</string>

    <string name="login">Login</string>
    <string name="login_slogan">Securely login to your account</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login_btn">Login</string>
    <string name="forget_pw">Forget Password</string>
    <string name="or_continue">- OR Continue with -</string>
    <string name="create_acc">Create an Account</string>
    <string name="sign_up">Sign Up</string>

    <string name="create_acc2">Create an Account</string>
    <string name="sign_up_slogan">Securely login to your account</string>
    <string name="name">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="r_pw">Repeat Password</string>
    <string name="create_acc_btn">Create Account</string>
    <string name="already_hv_acc">I Already Have an Account</string>
    <string name="login_link">Log In</string>
    <string name="title_activity_home">Home</string>

    <string name="large_text">ABC</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home2">Home_2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings">Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_security">Privacy &amp; Security</string>
    <string name="general_preferences">General Preferences</string>
    <string name="support_about">Support &amp; About</string>
    <string name="account_logout">Account &amp; Logout</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>

    <string name="bdays">Birthdays</string>

    <!-- Birthday names (dummy data) -->
    <string name="name_ayesha_perera">Ayesha Perera</string>
    <string name="name_nimal_silva">Nimal Silva</string>
    <string name="name_tharushi_fernando">Tharushi Fernando</string>
    <string name="name_chanuka_wijesinghe">Chanuka Wijesinghe</string>
    <string name="name_isuri_jayawardena">Isuri Jayawardena</string>
    <string name="name_sahan_de_alwis">Sahan de Alwis</string>
    <string name="name_heshani_peris">Heshani Peris</string>
    <string name="name_ravindu_samarasinghe">Ravindu Samarasinghe</string>
    <string name="name_dilini_madushika">Dilini Madushika</string>
    <string name="name_malith_peiris">Malith Peiris</string>

    <!-- Birthday dates -->
    <string name="date_aug_02">Aug 02</string>
    <string name="date_aug_05">Aug 05</string>
    <string name="date_aug_07">Aug 07</string>
    <string name="date_aug_09">Aug 09</string>
    <string name="date_aug_12">Aug 12</string>
    <string name="date_aug_14">Aug 14</string>
    <string name="date_aug_17">Aug 17</string>
    <string name="date_aug_19">Aug 19</string>
    <string name="date_aug_22">Aug 22</string>
    <string name="date_aug_28">Aug 28</string>

    <!-- UI placeholders -->
    <string name="no_birthdays">No birthdays today</string>

    <string name="welcome">Welcome</string>
    <string name="user_name_sample">Lakshan Udara</string>
    <string name="big_date_sample">24/MAR</string>


    <string name="collapse_expand">Expand / Collapse</string>
    <string name="more_options">More options</string>

    <!-- Section Headers -->
    <string name="todays_birthdays">Today\'s Birthdays</string>
    <string name="upcoming_birthdays">Upcoming Birthdays</string>

    <!-- Today’s Birthday sample -->
    <string name="name_sample_today">Ranil Wickremesinghe</string>
    <string name="subtitle_today_sample">76th Birthday</string>

    <!-- Upcoming Birthdays: Names -->
    <string name="name_gotabaya">Gotabaya Rajapaksa</string>
    <string name="name_maithripala">Maithripala Sirisena</string>
    <string name="name_mahinda">Mahinda Rajapaksa</string>
    <string name="name_anura">Anura Kumara</string>

    <!-- Upcoming Birthdays: Dates -->
    <string name="date_june_20">June 20</string>
    <string name="date_sept_3">September 3</string>
    <string name="date_nov_18">November 18</string>
    <string name="date_nov_24">November 24</string>


    <!-- Missed Birthdays section -->
    <string name="missed_birthdays">Missed Birthdays</string>

    <!-- Missed: Names -->
    <string name="name_sandun_perera">Sandun Perera</string>
    <string name="name_kavindi_senanayake">Kavindi Senanayake</string>
    <string name="name_pasindu_jayasuriya">Pasindu Jayasuriya</string>
    <string name="name_nethmi_fernando">Nethmi Fernando</string>

    <!-- Missed: Dates -->
    <string name="date_mar_02">March 2</string>
    <string name="date_mar_05">March 5</string>
    <string name="date_mar_11">March 11</string>
    <string name="date_mar_19">March 19</string>


    <string name="add_birthday_title">Add a Birthday</string>

    <!-- Content descriptions -->
    <string name="cd_add_photo">Add or change photo</string>

    <!-- Labels -->
    <string name="label_full_name">Full Name</string>
    <string name="label_nick_name">Nick Name</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_relation">Relation Type</string>
    <string name="label_additional">Additional Info</string>

    <!--     Hints -->
    <string name="hint_full_name">Enter full name</string>
    <string name="hint_optional">Optional</string>
    <string name="hint_ddmmyyyy">DD/MM/YYYY</string>
    <string name="hint_relation">Other</string>
    <string name="hint_additional">Notes, likes, reminders…</string>

    <!-- Button -->
    <string name="btn_add">Add</string>

    <string name="all_birthdays">All Birthdays</string>
    <string name="search_hint">Search</string>

    <string name="dialog_logout_title">Log out?</string>
    <string name="dialog_logout_message">Are you sure you want to log out?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_logout">Log out</string>

</resources>





