<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding_3">

    <ImageView
        android:id="@+id/imageback2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/image3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.090"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/backbtn" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="342dp"
        android:layout_height="262dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252"
        app:srcCompat="@drawable/img_3" />

    <TextView
        android:id="@+id/onboard3"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:layout_marginBottom="220dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/onboard3"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onboard33"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/onboard33"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboard3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/getStart"
        android:layout_width="318dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/skyBlue"
        android:fontFamily="@font/poppins_black"
        android:text="@string/getStart"
        android:textColorLink="@null"
        app:cornerRadius="20px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

</androidx.constraintlayout.widget.ConstraintLayout>